<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1">
        <item
        android:id="@+id/nav_dashboard"
        android:title="@string/dashboard"/>
    </group>
    <group
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_list"
            android:title="@string/fires_list"/>
    </group>
    <group
        android:id="@+id/group3">
        <item
            android:id="@+id/nav_map"
            android:title="@string/fires_map"/>
    </group>
    <group
        android:id="@+id/group4">
        <item
            android:id="@+id/nav_form"
            android:title="@string/report_fire"/>
    </group>
    <group
        android:id="@+id/group5">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"/>
    </group>
    <group
        android:id="@+id/group6">
        <item
            android:id="@+id/nav_about"
            android:title="@string/about"/>
    </group>



</menu>
