<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="35dp"
        android:text="@string/form_title"
        android:textColor="@color/black"
        android:textSize="35sp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/ccHint"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/district"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:autofillHints="@string/district_hint"
        android:ems="10"
        android:hint="@string/district_hint"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/text_pictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:text="@string/pictures"
        android:textColor="@color/black"
        android:textSize="20sp"/>


    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:src="@mipmap/upload">

    </ImageView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/gray"
            android:text="@string/submit" />

        <Button
            android:id="@+id/report_now_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/red"
            android:text="@string/reportNow" />

    </LinearLayout>



</LinearLayout>