<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="35dp"
        android:text="@string/form_title"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">


        <TextView
            android:id="@+id/currentState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/current_state" />

        <TextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/district" />

        <TextView
            android:id="@+id/district"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/text_concelho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/concelho" />

        <TextView
            android:id="@+id/concelho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_freguesia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/freguesia" />

        <TextView
            android:id="@+id/freguesia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/text_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/hour" />

        <TextView
            android:id="@+id/hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_observations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/observations" />

    <TextView
        android:id="@+id/observations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"

        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:text="@string/info_not_available"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/text_cc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"

            android:text="@string/cc" />

        <TextView
            android:id="@+id/cc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:text="@string/info_not_available"
            android:textSize="14sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_pictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/pictures"
        android:textSize="16sp"/>

    <ImageView
        android:layout_width="287dp"
        android:layout_height="123dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="upload">

    </ImageView>



</LinearLayout>